2014-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.72.10 released.

2014-08-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.72.8 released.

2014-08-08  Carl Hetherington  <cth@carlh.net>

	* Approximate support for changing timing details of multiple
	bits of content at the same time.

	* Allow removal of multiple bits of content at the same time.

	* Version 1.72.7 released.

2014-08-04  Carl Hetherington  <cth@carlh.net>

	* Add BCC option for KDM emails.

2014-07-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.72.5 released.

2014-07-17  Carl Hetherington  <cth@carlh.net>

	* Fix corrupted text in job descriptions in some cases.

	* Speculative fix for failure to keep Windows
	machines awake during encodes.

2014-07-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.72.4 released.

2014-07-16  Carl Hetherington  <cth@carlh.net>

	* Add default scaling setting to preferences (#384).

	* Version 1.72.3 released.

2014-07-16  Carl Hetherington  <cth@carlh.net>

	* Improve approximate time reports a bit.

	* Make KDM email subject configurable.

	* Updates to de_DE from Carsten Kurz.

	* Limit allowed KDM types based on Interop/SMPTE setting
	of DCP (#385).

	* Updates to fr_FR from Grégoire Ausina.

2014-07-14  Carl Hetherington  <cth@carlh.net>

	* Bump libdcp to get a new version which writes
	<Hash> values to CPLs.

2014-07-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.72.2 released.

2014-07-10  Carl Hetherington  <cth@carlh.net>

	* Try to fix corruption of KDM email setting in
	some cases.

	* Version 1.72.1 released.

2014-07-08  Carl Hetherington  <cth@carlh.net>

	* Fix various problems with seek and content
	being trimmed when its video frame rate is
	overridden.

2014-07-02  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2014-06-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.72.0 released.

2014-06-28  Carl Hetherington  <cth@carlh.net>

	* Version 1.71.2 released.
