@@ -27,11 +27,11 @@
 #include "ui_signaller.h"
 #include "exceptions.h"
 #include "film.h"
+#include "safe_stringstream.h"
 
 #include "i18n.h"
 
 using std::string;
-using std::stringstream;
 using std::set;
 using std::list;
 using std::cout;
@@ -230,7 +230,7 @@ Content::trimmed (Time t) const
 string
 Content::identifier () const
 {
-	stringstream s;
+	SafeStringStream s;
 	
 	s << Content::digest()
 	  << "_" << position()
