@@ -23,13 +23,13 @@ extern "C" {
 }
 #include "ffmpeg_examiner.h"
 #include "ffmpeg_content.h"
+#include "safe_stringstream.h"
 
 #include "i18n.h"
 
 using std::string;
 using std::cout;
 using std::max;
-using std::stringstream;
 using boost::shared_ptr;
 using boost::optional;
 
@@ -144,7 +144,7 @@ FFmpegExaminer::video_length () const
 string
 FFmpegExaminer::audio_stream_name (AVStream* s) const
 {
-	stringstream n;
+	SafeStringStream n;
 
 	n << stream_name (s);
 
@@ -160,7 +160,7 @@ FFmpegExaminer::audio_stream_name (AVStream* s) const
 string
 FFmpegExaminer::subtitle_stream_name (AVStream* s) const
 {
-	stringstream n;
+	SafeStringStream n;
 
 	n << stream_name (s);
 
@@ -174,7 +174,7 @@ FFmpegExaminer::subtitle_stream_name (AVStream* s) const
 string
 FFmpegExaminer::stream_name (AVStream* s) const
 {
-	stringstream n;
+	SafeStringStream n;
 
 	if (s->metadata) {
 		AVDictionaryEntry const * lang = av_dict_get (s->metadata, "language", 0, 0);
