@@ -22,7 +22,6 @@
 #include <algorithm>
 #include <fstream>
 #include <cstdlib>
-#include <sstream>
 #include <iomanip>
 #include <unistd.h>
 #include <boost/filesystem.hpp>
@@ -55,11 +54,11 @@
 #include "ratio.h"
 #include "cross.h"
 #include "cinema.h"
+#include "safe_stringstream.h"
 
 #include "i18n.h"
 
 using std::string;
-using std::stringstream;
 using std::multimap;
 using std::pair;
 using std::map;
@@ -159,7 +158,7 @@ Film::video_identifier () const
 {
 	assert (container ());
 
-	stringstream s;
+	SafeStringStream s;
 	s.imbue (std::locale::classic ());
 	
 	s << container()->id()
@@ -493,7 +492,7 @@ Film::file (boost::filesystem::path f) const
 string
 Film::isdcf_name (bool if_created_now) const
 {
-	stringstream d;
+	SafeStringStream d;
 
 	string raw_name = name ();
 
@@ -817,7 +816,7 @@ Film::info_path (int f, Eyes e) const
 	boost::filesystem::path p;
 	p /= info_dir ();
 
-	stringstream s;
+	SafeStringStream s;
 	s.width (8);
 	s << setfill('0') << f;
 
@@ -844,7 +843,7 @@ Film::j2c_path (int f, Eyes e, bool t) const
 	p /= "j2c";
 	p /= video_identifier ();
 
-	stringstream s;
+	SafeStringStream s;
 	s.width (8);
 	s << setfill('0') << f;
 
