@@ -29,13 +29,13 @@
 #include "cross.h"
 #include "ui_signaller.h"
 #include "exceptions.h"
+#include "safe_stringstream.h"
 
 #include "i18n.h"
 
 using std::string;
 using std::list;
 using std::cout;
-using std::stringstream;
 using boost::shared_ptr;
 
 Job::Job (shared_ptr<const Film> f)
@@ -306,7 +306,7 @@ Job::status () const
 		pc = 99;
 	}
 
-	stringstream s;
+	SafeStringStream s;
 	if (!finished ()) {
 		s << pc << N_("%");
 		if (p >= 0 && t > 10 && r > 0) {
